--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <!-- Shop name -->
-        <h1>Shopping</h1>
+        <h1>Mart 24x7</h1>
         <p>One destination for all your needs</p>
 
         <!-- Clearfix -->
